--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -10,7 +10,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11720291.md#1" target="_blank">车评：为七人车充电 2019 Chrysler Pacifica Hybrid Ltd</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11720291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019_Chrysler_Pacifica_Hybrid_01-150x120.jpg" align ="left"></a>对于有小孩子的家庭来说，Minivan是可完全发挥它的作用及好处，例如车内空间大、乘客出入方便、滑门开关占用面积小等，使这一类车型拥有一批固定客户。Chrysler的Town &amp; Country及旗下的Dodge Caravan在市场上超过廿年，自1983年至今年11月，售出超过1千5百万辆Minivan，所以.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717931.md#1" target="_blank">假新闻时时在身边 如何才能辨别真假？</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717931.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/05/405180035450-150x120.jpg" align ="left"></a>“假新闻”（fake news）在英文中又分为两种：“资讯扭曲”（misinformation）和“刻意资讯造假”（disinformation）。细分来讲，前者通常是指现代社交媒体捕风捉影、以讹传讹，不经意中大面积传播错误的资讯。后者则是指有人刻意释出虚假资讯，为了蛊惑人心、达到某种不可告人的目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718195.md#1" target="_blank">冬季假期 节庆食品恐成宠物居家安全陷阱</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718195.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-72815346-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="Amsterdam, NETHERLANDS: Queenie the dog is already in the mood for Christmas 13 December 2006 in the VIP dog boutique in Amsterdam. With Christmas approaching, besides houses and streets, dogs can now also be decorated. AFP PHOTO- ANP/ COPYRIGHT EVERT ELZINGA ***NETHERLANDS OUT*** (Photo credit should read EVERT ELZINGA/AFP/Getty Images)" align ="left"></a>在冬季，对家中的宠物来说，可是有许多需要特别留意的危险，才不会让憾事发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:21 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719151.md#1" target="_blank">中医师：常吃5种食物 补肾抗疲劳</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719151.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney-food-yam_1078453388-150x120.jpg" align ="left"></a>冬天属水属肾，主封藏，是补肾的好时节，来看看哪些常见的食物能够补肾吧！五种补肾食物：1、黑芝麻：在中医的五行五色理论中，黑色属肾，黑色食物多入肾经，因此常见许多黑色的食物都有补肾的功效；2、黑豆；3、核桃；4、山药：山药也是补肾的一味重要的药材；5、羊肉。此外，补肾的食物还有黑米（紫米）、黑木耳、乌鸡、栗子等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719151.md#1" target="_blank">别错过这些“补肾食物” 中医分享养生吃法</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719151.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney-food_1304590291-150x120.jpg" align ="left"></a>冬天属水属肾，主封藏，是补肾的好时节，来看看哪些常见的食物能够补肾吧！五种补肾食物：1、黑芝麻：在中医的五行五色理论中，黑色属肾，黑色食物多入肾经，因此常见许多黑色的食物都有补肾的功效；2、黑豆；3、核桃；4、山药：山药也是补肾的一味重要的药材；5、羊肉。此外，补肾的食物还有黑米（紫米）、黑木耳、乌鸡、栗子等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719226.md#1" target="_blank">美国买家正利用英镑疲软时机抢购伦敦房地产</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719226.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/KingsRoadParkLogoCGI2-150x120.jpeg" align ="left"></a>聪明的美国买家在2019年已加倍关注并投入伦敦房地产市场，赶在预期的英国脱欧后价格反弹之前果断以低价入手。最近的交易情况证明，目前及接下来的一段时间正是投资大西洋彼岸的黄金时机。在所有英国的房地产项目中，圣威廉（St William）开发的伦敦国王道花园（King's Road Park）新社区房产已开盘发布，本地和国.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718409.md#1" target="_blank">喝对茶才养生 绿茶等6大类 哪种最适合你？</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718409.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/tea_532470610-150x120.jpg" align ="left"></a>红茶、绿茶、普洱茶、东方美人??市面上茶类种类各异。初入门者，可从6大茶类开始了解。6大茶类以“发酵程度”分类。5方法，选择适合自己的茶：有些人喝茶出现睡不着、心悸等，也许是喝到不适合的茶，先了解自己的体质相当重要。1. 寒性、燥性体质，适合饮不同的茶。茶叶本身属凉性，经过发酵与炭焙可变为偏暖或暖性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716400.md#1" target="_blank">多肉植物冬季照料6要点 先学会正确浇水</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-677101-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="384393 06: A cholla cactus in the desert near Pinon Hills, CA is covered with snow, January 28, 2000, as a storm moves out of southern California leaving skies of blue. (Photo by David McNew/Newsmakers)" align ="left"></a>随着冬季的到来，多肉植物的照料方式也需作出改变，才能帮助这些喜欢温暖与日照的植物，度过寒冷阴暗的冬天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:49 PM			</td></tr>
